css: fix /admin/config pre overflow

--- a/public/less/_admin.less
+++ b/public/less/_admin.less
@@ -1,80 +1,85 @@
 .admin {
-	padding-top: 15px;
-	padding-bottom: @footer-margin * 2;
+  padding-top: 15px;
+  padding-bottom: @footer-margin * 2;
 
-	.table.segment {
-		padding: 0;
-		font-size: 13px;
+  .table.segment {
+    padding: 0;
+    font-size: 13px;
 
-		&:not(.striped) {
-			padding-top: 5px;
+    &:not(.striped) {
+      padding-top: 5px;
 
-			thead {
-				th:last-child {
-					padding-right: 5px !important;
-				}
-			}
-		}
+      thead {
+        th:last-child {
+          padding-right: 5px !important;
+        }
+      }
+    }
 
-		th {
-			padding-top: 5px;
-			padding-bottom: 5px;
-		}
+    th {
+      padding-top: 5px;
+      padding-bottom: 5px;
+    }
 
-		&:not(.select) {
-			th, td {
-				&:first-of-type {
-					padding-left: 15px !important;
-				}
-			}
-		}
+    &:not(.select) {
+      th,
+      td {
+        &:first-of-type {
+          padding-left: 15px !important;
+        }
+      }
+    }
   }
 
   code {
     color: #db2828;
   }
 
-	&.user {
-		.email {
-			max-width: 200px;
-		}
-	}
+  &.user {
+    .email {
+      max-width: 200px;
+    }
+  }
 
-	dl.admin-dl-horizontal {
-		padding: 10px 15px;
-		margin: 0;
+  dl.admin-dl-horizontal {
+    padding: 10px 15px;
+    margin: 0;
 
-		dd {
-			margin-left: 240px;
-		}
-		dt {
-			font-weight: bolder;
-			float: left;
-			width: 250px;
-			clear: left;
-			overflow: hidden;
-			text-overflow: ellipsis;
-			white-space: nowrap;
-		}
-	}
+    dd {
+      margin-left: 240px;
+    }
+    dt {
+      font-weight: bolder;
+      float: left;
+      width: 250px;
+      clear: left;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+  }
 
-	&.config {
-		#test-mail-btn {
-			margin-left: 5px;
-		}
-		table tbody tr td:first-child {
-			font-weight: bold;
-		}
-		pre {
-			background-color: #f7f7f7;
-			padding: 5px;
-		}
-		.log-config {
-			table tbody tr td {
-				&:first-child {
-					width: 100px;
-				}
-			}
-		}
-	}
+  &.config {
+    #test-mail-btn {
+      margin-left: 5px;
+    }
+    table tbody tr td:first-child {
+      font-weight: bold;
+    }
+    pre {
+      background-color: #f7f7f7;
+      padding: 5px;
+    }
+    .log-config {
+      table tbody tr td {
+        &:first-child {
+          width: 100px;
+        }
+        &:last-child pre {
+          width: 600px;
+          overflow-y: auto;
+        }
+      }
+    }
+  }
 }
